<resources>
    <string name="app_name">Bikerama</string>

    <!-- Strings Main -->
    <string name="welcome">Bem vindo</string>
    <string name="btn_logout">Logout</string>


    <!-- Strings Permissoes -->
    <string name="permission_rationale">"Permissões de Contatos é necessário para completar o
        preenchimento do email."
    </string>


    <!-- Strings Activity -->
    <string name="title_activity_register">Registro</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_historico">Histórico Percursos</string>


    <!-- Strings Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_bem_vindo">Bem vindo</string>
    <string name="prompt_faca_cadastro">Novo no Bikerama? Registre-se aqui</string>


    <!-- Strings Registro -->
    <string name="login_email">Email</string>
    <string name="login_password">Senha</string>
    <string name="login_cadastro">Novo no Bikerama? Registre-se aqui</string>

    <string name="action_sign_in">Já possui conta! Faça login aqui</string>
    <string name="action_register">Registre-se</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_name_register">Nome</string>
    <string name="action_email_register">Email</string>
    <string name="action_idade_register">Idade</string>
    <string name="action_sexo_register">Sexo</string>
    <string name="action_cidade_register">Cidade</string>
    <string name="action_uf_register">Estado</string>
    <string name="action_cep_register">CEP</string>
    <string name="action_senha_register">Senha</string>
    <string name="action_salvar">Salvar</string>
    <string name="action_continue_registro">Continue seu Cadastro</string>
    <string name="conte_mais">Ajude-nos a personalizar sua experiência contando sobre você</string>

    <string name="spinner_prompt">Idade</string>
    <string name="spinner_estado">Estado</string>
    <string name="spinner_cidade">Cidade</string>


    <!-- Strings Registro Bike -->
    <string name="cadastro_bike">Cadastre sua Bike para começar</string>
    <string name="action_name_bike">Nome</string>
    <string name="action_tipo_bike">Tipo</string>
    <string name="action_fabricante_bike">Fabricante</string>
    <string name="action_modelo_bike">Modelo</string>
    <string name="action_serie_bike">Nº de série</string>
    <string name="action_cor_bike">Cor</string>
    <string name="action_perfil_bike">Perfil de ciclista</string>
    <string name="action_data_bike">Data de aquisição</string>


    <!-- Strings Registro Componentes Bike -->
    <string name="cadastro_componentes_bike">Cadastre os Componentes da sua Bike</string>
    <string name="cadastro_componentes_bike_linha2">Preencha o máximo de componentes possível.</string>
    <string name="cadastro_componentes_bike_linha3">*A data de aquisição de cada componente será a mesma data de aquisição da Bike cadastrada.</string>
    <string name="cadastro_componentes_bike_linha4">**Se desejar cadastrar uma data diferente ou a data atual, procure Editar Componentes no menu, depois de realizar o cadastro.</string>
    <string name="cadastro_componentes_bike_controle">Controle:</string>
    <string name="cadastro_componentes_bike_transmissao">Transmissão:</string>
    <string name="cadastro_componentes_bike_frente">Frente:</string>
    <string name="cadastro_componentes_bike_traseira">Traseira:</string>
    <string name="componentes">Componentes</string>
    <string name="detalhes_componentes">Componente</string>
    <string name="editar_componentes">Editar Componente</string>
    <string name="componentes_marca">Marca/Modelo</string>
    <string name="componentes_data">Data de Cadastro:</string>
    <string name="componentes_data_nova">Nova Data de Cadastro:</string>


    <!-- Strings Registro Acessórios Bike -->
    <string name="cadastro_acessorios">Cadastre seus Acessórios</string>
    <string name="cadastro_acessorio_explain">*Cadastre o nome e o preço que pagou no seu acessório.</string>
    <string name="cadastro_acessorio_explain2">**Podem ser cadastrados capacetes, luvas, bottles, etc.</string>


    <!-- Strings TEla Inicial -->
    <string name="bike_minha_bike">Bike Selecionada</string>
    <string name="bike_novo_percurso">Novo Percurso</string>
    <string name="bike_minhas_bikes">Bikes</string>
    <string name="bike_minha_bike_componentes">Componentes</string>
    <string name="bike_minha_bike_acessorios">Acessórios</string>
    <string name="bike_minha_bike_historico">Histórico</string>
    <string name="bike_minha_bike_relatorios">Relatórios</string>
    <string name="bike_minha_bike_tutoriais">Tutoriais</string>


    <!-- Strings Percurso -->
    <string name="percurso_iniciar">Iniciar</string>
    <string name="percurso_iniciar_novo">Iniciar Novo Percurso</string>
    <string name="percurso_parar">Parar</string>
    <string name="percurso_gravando">Gravando...</string>
    <string name="percurso_pausado">Pausado...</string>
    <string name="percurso_localizacao">Localização</string>
    <string name="percurso_tempo_transcorrido">Tempo Transcorrido</string>
    <string name="percurso_salvar">Salvar Percurso</string>
    <string name="percurso_salvos">Percursos Salvos</string>
    <string name="percurso_historico">Histórico Percurso</string>
    <string name="percurso_nome">Nome do Percurso</string>
    <string name="percurso_tipo">Tipo Atividade</string>
    <string name="percurso_descricao">Descrição do Percurso</string>
    <string name="percurso_detalhes">Detalhes Percurso</string>
    <string name="percurso_nivel">Nível de Atividade</string>
    <string name="percurso_nivel_leve">Leve</string>
    <string name="percurso_nivel_moderado">Moderado</string>
    <string name="percurso_nivel_pesado">Pesado</string>
    <string name="percurso_data">Data</string>
    <string name="percurso_distancia">Distância Percorrida</string>
    <string name="percurso_distancia_0">0 Km</string>
    <string name="percurso_velocidade">Kilometragem</string>
    <string name="percurso_velocidade_0">0.0 Km</string>
    <string name="percurso_sincro">Sincronizado</string>


    <!-- Strings Relatorios -->
    <string name="relatorio_data">Data</string>
    <string name="relatorio_grupo">Grupo Componentes</string>
    <string name="relatorio_status">Aviso Visualizado</string>
    <string name="relatorio_verificacao">Aviso de Verificação</string>


    <!-- Strings Anuncios -->
    <string name="percurso_AnuncioGravaPercurso">ANUNCIE AQUI!</string>


    <!-- Strings Botoes Percurso -->
    <string name="btn_percurso_concluir">Concluir</string>
    <string name="btn_start_location_updates">Continuar</string>
    <string name="btn_stop_location_updates">Pausar</string>
    <string name="btn_salvar_percurso">Salvar</string>
    <string name="btn_cancelar_percurso">Cancelar</string>


    <!-- Strings Erros -->
    <string name="error_invalid_email">Este email é inválido</string>
    <string name="error_invalid_password">Senha é muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>


    <!-- Strings Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_save">Save</string>
    <string name="action_label">Add Label</string>
    <string name="action_help">Ajuda</string>
    <string name="action_novo_percurso">Novo Percurso</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_teste">TesteActivity</string>
    <string name="title_activity_register_acessorios">RegisterAcessoriosActivity</string>
    <string name="title_activity_main_">Main_Activity</string>
    <string name="title_activity_grava_percurso">GravaPercursoActivity</string>
    <string name="title_activity_view_relatorios">ViewRelatoriosActivity</string>


</resources>
