<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg">

            <!--  Header  Starts-->
            <LinearLayout
                android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/header_gradient"
                android:paddingTop="5dip"
                android:paddingBottom="5dip">
                <!-- Logo Start-->
                <ImageView android:src="@drawable/bikerama_ldpi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"/>
                <!-- Logo Ends -->
            </LinearLayout>
            <!--  Header Ends -->

            <!-- Footer Start -->
            <LinearLayout
                android:id="@+id/footer"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="203dip"
                android:background="@drawable/footer_repeat"
                android:layout_alignParentBottom="true">
            </LinearLayout>
            <!-- Footer Ends -->

            <!-- Registration Form -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bike_minha_bike"
                    android:layout_marginTop="24dp"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textBike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="20dp"/>

                <Button android:id="@+id/btnNovoPercurso"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:background="@drawable/button_green"
                    android:text="@string/bike_novo_percurso"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <Button android:id="@+id/btnBikes"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:background="@drawable/button_shape"
                    android:text="@string/bike_minhas_bikes"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <Button android:id="@+id/btnComponentes"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:background="@drawable/button_shape"
                    android:text="@string/bike_minha_bike_componentes"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <Button android:id="@+id/btnAcessorios"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:background="@drawable/button_shape"
                    android:text="@string/bike_minha_bike_acessorios"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <Button android:id="@+id/btnHistorico"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:background="@drawable/button_shape"
                    android:text="@string/bike_minha_bike_historico"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <Button android:id="@+id/btnRelatorios"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:background="@drawable/button_shape"
                    android:text="@string/bike_minha_bike_relatorios"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <Button android:id="@+id/btnTutoriais"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:background="@drawable/button_shape"
                    android:text="@string/bike_minha_bike_tutoriais"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnLogout"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dip"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:background="@drawable/button_logout"
                    android:text="@string/btn_logout"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

            </LinearLayout>
            <!-- Registration Form Ends -->

        </RelativeLayout>
    </ScrollView>

</LinearLayout>