<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg">

            <!-- Footer Start -->
            <LinearLayout
                android:id="@+id/footer"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="203dip"
                android:background="@drawable/footer_repeat"
                android:layout_alignParentBottom="true">
            </LinearLayout>
            <!-- Footer Ends -->

            <!-- Registration Form -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bike_minha_bike"
                    android:layout_marginTop="34dp"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textBike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="0dp"
                    android:textStyle="bold"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percurso_tempo_transcorrido"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="0dp"
                    android:textSize="15sp" />

                <Chronometer
                    android:id="@+id/chronometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView1"
                    android:layout_below="@+id/textView1"
                    android:layout_marginTop="0dp"
                    android:format="%s"
                    android:text="Chronometer"
                    android:textSize="55sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percurso_localizacao"
                    android:layout_marginTop="10dp"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Coordenadas"
                    android:id="@+id/tv_coordinate"
                    android:textIsSelectable="false"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="0dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percurso_gravando"
                    android:id="@+id/textViewGravando"
                    android:layout_margin="16dp"
                    android:textSize="25dp"
                    android:textColor="@color/azul_escuro"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <Button android:id="@+id/btnPararPercurso"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:background="@drawable/button_logout"
                    android:text="@string/btn_stop_location_updates"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <Button android:id="@+id/btnConcluirPercurso"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="7dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:background="@drawable/button_black"
                    android:text="@string/btn_percurso_concluir"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

            </LinearLayout>
            <!-- Registration Form Ends -->

        </RelativeLayout>
    </ScrollView>

</LinearLayout>
